# igd-assignment

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: build.yml
scripts/: build_rom.py
src/: main.rs
